Correções de bugs e validações